--- a/pages/about-us.css
+++ b/pages/about-us.css
@@ -123,6 +123,20 @@ main .cont h2{
     border: none;
     background-color: #fff;
 }
+.team001 span{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 10px;
+}
+.team002 span{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 10px;
+}
 .team002{
     padding: 40px;
     border: none;
@@ -217,10 +231,19 @@ margin-bottom: 5px;}
 .count-digit{
     display: flex;
     justify-content: center;
+    color: #9c3;
+    font-family: 'Poppins', sans-serif;
+    font-size: 30px;
+    font-weight: bold;
 }
 .count-title{
     display: flex;
     justify-content: center;
+    color: #fff;
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+
 }
 .testemunhos{
     display: flex;
@@ -242,10 +265,37 @@ margin-bottom: 5px;}
     display: flex;
     flex-direction: row;
 }
+.position{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 15px;
+    color: #9c3;
+    font-size: 20px;
+}
 .test002, .test003{
     background-color: #fff;
     padding: 40px;
     margin: 15px;
+}
+.test001 .test002 p{
+    margin-top: 10px;
+}
+.test001 .test002 span{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+}
+.test001 .test003 span{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+}
+.test001 .test003 p{
+    margin-top: 10px;
 }
 .text001{
     margin-bottom: 50px;
@@ -305,5 +355,13 @@ margin-bottom: 5px;}
     color: #9c3;
 }
 .text003 ul li a{
+    color: #fff;
+}
+.copy{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, .8);
     color: #fff;
 }
